2005-11-19  Zoltan Varga  <vargaz@gmail.com>

	* ArrayTest.cs: Reenable some previously not-working 2.0 tests.

2005-11-11  Raja R Harinath  <rharinath@novell.com>

	* ArrayTest.cs (Resize_null): New.  Test Resize<T> with a null argument.

2005-11-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Int64Test.cs : ditto for long. Numbered tests.

2005-11-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Int32Test.cs : Added tests for parsing "2147483648" (should be error)

2005-10-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringTest.cs: new test for LastIndexOfAny.

2005-10-18  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add tests for #75515.

2005-10-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeTest.cs: Added GetTypeCode test.

2005-10-14  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : another crappy Windows dependent format.

2005-10-07  Zoltan Varga  <vargaz@gmail.com>

	* DelegateTest.cs: New file.

2005-09-26  Zoltan Varga  <vargaz@gmail.com>

	* StringTest.cs: Add test for #76204.

2005-09-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeTest.cs: test for #76150.

2005-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : test for #76082.

2005-09-06  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : test for #72132.

2005-09-06  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : test for #75995.

2005-09-06  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : test for #75213.

2005-09-01  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : another COM dependent idiotic parse.

2005-08-19  Gert Driesen <drieseng@users.sourceforge.net>

	* ConvertTest.cs: FromBase64String always return zero-length byte 
	array for a zero-length string. On 2.0 profile, FromBase64String also
	returns a zero-length byte array for a whitespace-only string.
	Added tests for empty and whitespace-only byte array.

2005-08-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>
